--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Oswald:wght@200;300;400;500;600;700&display=swap');
 @font-face {
     font-family: 'marvel';
-    src: url('./font/MarvelRegular-Dj83.ttf') format('truetype'); 
+    src: url('/font/MarvelRegular-Dj83.ttf') format('truetype'); 
 }
 
 
