--- a/css/style.css
+++ b/css/style.css
@@ -15,10 +15,7 @@
 html {
     scroll-behavior: smooth;
 }
-body {
-}
-h1 {
-}
+
 header {
     background-color: #EC1D24;
     padding: 10px;
@@ -32,6 +29,20 @@ header .header-container .nav-container {
     display: flex;
     justify-content: space-between;
     align-items: center;
+}
+header .header-container .nav-container nav a p {
+    display: inline-block;
+    padding: 2px 10px;
+    font-family: 'marvel';
+    transition: 0.3s;
+}
+header .header-container .nav-container nav a p:hover {
+    color: white;
+    transform: scale(1.1);
+}
+.herois-btn {
+    color: white;
+    transform: scale(1.1)
 }
 header .header-container .nav-container i {
     font-size: 2em;
@@ -50,7 +61,6 @@ header .header-container nav {
 }
 header .header-container nav a {
     font-family: 'marvel';
-    margin-right: 20px;
     font-size: 3.5em;
     color: black;
     text-decoration: none;
@@ -58,7 +68,6 @@ header .header-container nav a {
 
 
 main {
-
 }
 main .main-container {
     max-width: 1100px;
@@ -71,6 +80,7 @@ main .main-container .nav-herois{
     justify-content: space-between;
     align-items: center;
 }
+
 main .main-container .nav-herois h1 {   
 }
 h1 span {
@@ -165,7 +175,6 @@ main #filmes h1 {
     margin: 20px 0 10px 0;
 }
 main #filmes .filmes {
- 
 }
 main #filmes .filmes ol {
     display: inline-block;
@@ -186,7 +195,6 @@ main #site h1 {
     color: #35363a;
 }
 main #site .site {
-
 }
 main #site .site p {
     font-size: 1.3em;
@@ -205,10 +213,8 @@ aside ul {
 }
 aside ul li {
     display: inline-block;
-    
 }
 aside ul li a {
-    
 }
 aside ul li a img {
     margin: 0 10px;
@@ -226,7 +232,6 @@ main .main-container #herois section {
     width: 200px;
     margin: 10px 10px;
     padding: 10px;
-    
 }
 main .main-container #herois section picture {
     width: 180px;
@@ -293,6 +298,7 @@ header .header-container .logo img {
     width: 100%;
     height: 100%;
 }
+
 header .header-container nav a {
     display: none;
 }
