--- a/css/style.css
+++ b/css/style.css
@@ -59,6 +59,7 @@ header .header-container .logo img {
 header .header-container nav {
     
 }
+
 header .header-container nav a {
     font-family: 'marvel';
     font-size: 3.5em;
@@ -298,9 +299,29 @@ header .header-container .logo img {
     width: 100%;
     height: 100%;
 }
-
-header .header-container nav a {
-    display: none;
+#nav-list.bnt-active {
+    text-align: center;
+    height: 35vh;
+    visibility: visible;
+    overflow-y: auto;
+}
+header .header-container nav  {
+    /*display: none;*/
+    position: absolute;
+    display: block;
+    background-color: #EC1D24;
+    top: 80px;
+    right: 0;
+    width: 35vw;
+    height: 0;
+    text-align: center;
+    visibility: hidden;
+    overflow-y: hidden;
+    transition: .4s ease-in;
+}
+header .header-container .nav-container nav a p {
+    padding: 1rem 1rem;
+    border-bottom: 2px solid #ff5858;
 }
 header .header-container .nav-container i {
     font-size: 2em;
