--- a/css/style.css
+++ b/css/style.css
@@ -32,9 +32,9 @@ header .header-container .nav-container {
 }
 header .header-container .nav-container nav a p {
     display: inline-block;
-    padding: 2px 10px;
+    padding:  10px;
     font-family: 'marvel';
-    transition: 0.3s;
+    transition:  0.3s ;
 }
 header .header-container .nav-container nav a p:hover {
     color: white;
@@ -42,7 +42,8 @@ header .header-container .nav-container nav a p:hover {
 }
 .herois-btn {
     color: white;
-    transform: scale(1.1)
+    transform: scale(1.1);
+    
 }
 header .header-container .nav-container i {
     font-size: 2em;
@@ -57,16 +58,13 @@ header .header-container .logo img {
     height: 100%;
 }
 header .header-container nav {
-    
 }
-
 header .header-container nav a {
     font-family: 'marvel';
     font-size: 3.5em;
     color: black;
     text-decoration: none;
 }
-
 
 main {
 }
@@ -81,8 +79,8 @@ main .main-container .nav-herois{
     justify-content: space-between;
     align-items: center;
 }
-
-main .main-container .nav-herois h1 {   
+main .main-container .nav-herois h1 { 
+    font-size: 2em;  
 }
 h1 span {
     font-family: 'marvel';
@@ -101,7 +99,7 @@ main .main-container .nav-herois .busca-container input {
     background: none;
     border: none;
     outline: none;
-    height: 40px;
+    height: 30px;
     color: white;
     width: 200px;
     font-size: 1.2em;
@@ -111,9 +109,6 @@ main .main-container .nav-herois .busca-container input::placeholder{
     text-indent: 2px;
     font-size: 1.1em;
 }
-/*main .main-container .nav-herois .busca-container input::-webkit-search-cancel-button{
-    display: none;
-}*/
 main .main-container .nav-herois .busca-container i {
     color: white;
     cursor: pointer;
@@ -126,6 +121,13 @@ main .main-container #herois {
     flex-wrap: wrap;
     justify-content: space-around;
 }
+main .main-container #herois h3{
+    display: none;
+    text-align: center;
+    font-size: 3em;
+    color: #EC1D24;
+    margin: 30px 0;
+}
 main .main-container #herois section {
     display: flex;
     flex-direction: column;
@@ -136,24 +138,24 @@ main .main-container #herois section {
     border-radius: 1.5rem;
     padding: 10px;
     box-shadow: 2px 2px 3px rgba(0, 0, 0, 0.219);
+    transition: .3s;
+}
+main .main-container #herois section:hover {
+    box-shadow: inset 0px 0px 0px 10px #EC1D24; 
 }
 main .main-container #herois section picture {
     width: 210px;
     height: 210px;
-    
 }
 main .main-container #herois section img {
     border-radius: 50%;
     margin: auto;
     width: 100%;
     height: 100%;
-    transition: 0.3s;
-    
+    transition: 0.3s;   
 }
 main .main-container #herois section img:hover {
-    border-radius: 1.5rem 1.5rem 0 0;
-    
-    
+    border-radius: .8rem .8rem 0 0; 
 }
 main .main-container #herois section h2 {
     color: white;
@@ -201,10 +203,8 @@ main #site .site p {
     font-size: 1.3em;
     font-weight: 400;
 }
-
 aside {
-    background-color: #EC1D24;
-    
+    background-color: #EC1D24;    
 }
 aside ul {
     max-width: 1200px;
@@ -227,148 +227,3 @@ aside ul li a img:hover {
     transform: scale(1.1);
 }
 
-@media (max-width: 750px) {
-
-main .main-container #herois section {
-    width: 200px;
-    margin: 10px 10px;
-    padding: 10px;
-}
-main .main-container #herois section picture {
-    width: 180px;
-    height: 180px;      
-}
-
-
-}
-
-@media (max-width: 720px) {
-
-header .header-container nav a {
-    font-size: 3em;
-}
-main .main-container .nav-herois .busca-container input {
-    width: 150px;
-    height: 20px;
-    font-size: 0.9em;
-}
-main .main-container .nav-herois h1 {  
-    font-size: 1.6em; 
-}
-h1 span {
-    font-size: 1.2em;
-}
-main .main-container #herois section {
-    width: 200px;
-}
-main .main-container #herois section picture {
-    width: 180px;
-    height: 180px;
-}
-main .main-container #herois section h2 {
-    font-size: 1.2em;
-}
-main .main-container #herois section p {
-    font-size: 1.2em;
-}
-
-main #filmes .filmes ol {
-    column-count: 1;
-}
-}
-@media (max-width: 660px) {
-
-main .main-container #herois section {
-    width: 250px;
-    margin: 10px 10px;
-    padding: 10px;
-    
-}
-main .main-container #herois section picture {
-    width: 230px;
-    height: 230px;      
-}
-}
-@media (max-width: 540px) {
-
-header .header-container .logo {
-    width: 150px;
-    height: 60px;
-}
-header .header-container .logo img {
-    width: 100%;
-    height: 100%;
-}
-#nav-list.bnt-active {
-    text-align: center;
-    height: 240px;
-    visibility: visible;
-    overflow-y: auto;
-    font-size: 0.8em;
-}
-header .header-container nav  {
-    /*display: none;*/
-    position: absolute;
-    display: block;
-    background-color: #EC1D24;
-    top: 80px;
-    right: 0;
-    width: 35vw;
-    height: 0;
-    text-align: center;
-    visibility: hidden;
-    overflow-y: hidden;
-    transition: .4s ease-in;
-}
-header .header-container .nav-container nav a p {
-    padding: 1rem 1rem;
-    
-    border-bottom: 2px solid #ff5858;
-}
-header .header-container .nav-container i {
-    font-size: 2em;
-    display: inline-block;
-}
-main .main-container .nav-herois .busca-container input {
-    display: none;
-}
-main .main-container #herois section {
-    width: 365px;     
-}
-main .main-container #herois section picture {
-    width: 345px;
-    height: 345px;      
-}
-main #filmes h1 {
-    font-size: 1.6em;
-}
-main #filmes .filmes ol li{
-    font-size: 1.1em;
-}
-main #site h1 {
-    font-size: 1.6em;
-}
-aside ul li a img {
-    width: 35px;
-    height: 35px;
-
-}
-}
-
-@media (max-width: 370px){
-
-#nav-list.bnt-active {
-    text-align: center;
-    height: 220px;
-    font-size: 0.7em;
-}
-main .main-container #herois section {
-    width: 300px;
-    margin: 10px 10px;
-    padding: 10px;        
-}
-main .main-container #herois section picture {
-    width: 280px;
-    height: 280px;      
-}
-}
